# StellarGigs

./: .env.example  .gitignore  Cargo.toml  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/activity/: page.tsx
app/campaigns/: page.tsx
app/campaigns/[id]/: page.tsx
app/dashboard/: page.tsx
app/dashboard/__tests__/: page.test.tsx
app/transactions/: page.tsx
components/: Providers.tsx
components/activity/: EventFeed.tsx
components/campaigns/: CampaignCard.tsx  CampaignForm.tsx  DonationForm.tsx
components/campaigns/__tests__/: CampaignCard.test.tsx
components/layout/: Navbar.tsx  Sidebar.tsx
components/wallet/: WalletConnect.tsx
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: error.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/crowdfund/test_snapshots/test/: test_create_campaign.1.json  test_create_campaign_invalid_goal_fails.1.json  test_double_initialize_fails.1.json  test_extend_deadline.1.json  test_get_campaigns_paginated.1.json  test_initialize.1.json  test_set_reward_token.1.json  test_set_reward_token_unauthorized_fails.1.json
contracts/reward_token/: Cargo.toml
contracts/reward_token/src/: lib.rs
hooks/: useCampaigns.ts  useEvents.ts  useWallet.ts
lib/: utils.ts
lib/stellar/: config.ts  contract.ts  wallet-kit.ts
scripts/: deploy.js
store/: event-store.ts  transaction-store.ts  wallet-store.ts
types/: index.ts
(+5 files in other folders)
